# carthage-pulse

./: .env.example  .gitignore  README.md  TODO  compose.yaml  ingestion_main.py  processing_main.py  pyproject.toml  storage_main.py
config/: dev.yaml
grafana_provisioning/dashboards/: dashboard.json  dashboard.yaml
grafana_provisioning/datasources/: datasources.yaml
postgres/: init.sql
reddit_enricher/: config.yaml.example  main.py  pyproject.toml
reddit_enricher/src/: __init__.py  config.py  consumer.py  enricher.py  logging_config.py  models.py  providers.py
reddit_stream/: config.yaml.example  main.py  pyproject.toml
reddit_stream/src/: __init__.py  config.py  kafka_producer.py  models.py  streamer.py
spark/: dockerfile  requirements.txt
speed-layer/: event_json_types.py  save_enriched_2.py  save_raw_2.py  spark_columns.py  spark_connection.py  spark_postgress.py  spark_save_enriched.py  spark_save_raw.py  terminate_all_spark.py
src/: __init__.py
src/ingestion/: __init__.py  config.py  producer.py  reddit_client.py
src/processing/: __init__.py  config.py  consumer.py  dummy_provider.py  llm_service.py
src/shared_utils/: __init__.py  config.py  config_utils.py  logger.py  models.py
src/storage/: config.py  consumer.py
