[project]
name = "reddit-llm-pipeline"
version = "1.0.0"
description = "Real-time Reddit LLM enrichment pipeline - fetches posts, enriches with LLM analysis"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.33.1",
    "pyyaml>=6.0",
    "kafka-python>=2.0.2",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "minio>=7.2.20",
    "pyarrow>=14.0.0",
    "setuptools>=82.0.1",
    "pyspark[connect]==3.5.4",
    "psycopg2-binary>=2.9.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion", "src/processing", "src/shared_utils", "src/storage", "src/speed"]
